# how

./: Cargo.toml
shell/: integration.zsh
src/: db.rs  main.rs  rank.rs  template.rs  ui.rs  utils.rs  widgets.rs
src/widgets/: confirmation.rs  text_area.rs
