[package]
name = "how"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.3"
crossterm = "0.28.1"
dirs = "5.0.1"
itertools = "0.13.0"
ratatui = "0.28.1"
ratatui-macros = "0.5.0"
rust-fuzzy-search = "0.1.1"
serde = { version = "1.0.210", features = ["derive", "rc"] }
toml_edit = { version = "0.22.21", features = ["serde", "parse", "display"] }
tui-textarea = "0.6.1"
tui-widget-list = "0.12.2"
