[package]
name = "how"
version = "0.1.0"
description = "Search a saved list of commands"
edition = "2021"

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
color-eyre = "0.6.3"
crossterm = "0.28.1"
dirs = "5.0.1"
itertools = "0.13.0"
ratatui = "0.28.1"
ratatui-macros = "0.5.0"
rust-fuzzy-search = "0.1.1"
serde = { version = "1.0.210", features = ["derive"] }
thiserror = "1.0.63"
toml = { version = "0.8.19", features = ["parse", "display"] }
tui-textarea = "0.6.1"
tui-widget-list = "0.12.2"
